src/objects/Flagged_Application__c.object
<CustomObject>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipName>Conflicting_Applications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Conflicting_Application_Applicant_Name__c</fullName>
        <formula>Conflicting_Application__r.Primary_Applicant__r.Full_Contact_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>xConflicting Application Applicant Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conflicting_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>xConflicting Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipName>Conflicting_Applications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DuplicateRecordItem__c</fullName>
        <externalId>true</externalId>
        <label>DuplicateRecordItem</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flagged_Application_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Flagged Application Member</label>
        <referenceTo>Application_Member__c</referenceTo>
        <relationshipLabel>Flagged Applications</relationshipLabel>
        <relationshipName>Flagged_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flagged_Record_Set__c</fullName>
        <label>Flagged Record Set</label>
        <referenceTo>Flagged_Record_Set__c</referenceTo>
        <relationshipLabel>Flagged Applications</relationshipLabel>
        <relationshipName>Flagged_Applications</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Listing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Listing</label>
        <referenceTo>Listing__c</referenceTo>
        <relationshipName>Conflicting_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manually_Flagged__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this application was flagged by a user.</description>
        <inlineHelpText>Check this box to send this application to be manually reviewed for conflicts.</inlineHelpText>
        <label>Manually Flagged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Application_Applicant_Name__c</fullName>
        <formula>Application__r.Applicant__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Applicant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Application_Submission_Date__c</fullName>
        <formula>Conflicting_Application__r.Application_Submitted_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Application Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Review_Status__c</fullName>
        <description>The current status of manual review for this application.</description>
        <inlineHelpText>Select the current status for the manual review of this potential conflicting application.</inlineHelpText>
        <label>Review Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Review</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Reviewed - Not Duplicate</fullName>
                </value>
                <value>
                    <fullName>Reviewed - Duplicate</fullName>
                </value>
                <value>
                    <fullName>Appealed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>System_Flagged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>System Flagged</label>
        <type>Checkbox</type>
    </fields>
    <label>Flagged Application</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Application__c</columns>
        <columns>Conflicting_Application__c</columns>
        <columns>Manually_Flagged__c</columns>
        <columns>System_Flagged__c</columns>
        <columns>Review_Status__c</columns>
        <columns>Listing__c</columns>
        <columns>Primary_Application_Applicant_Name__c</columns>
        <columns>Conflicting_Application_Applicant_Name__c</columns>
        <columns>Primary_Application_Submission_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Pending_Review</fullName>
        <columns>NAME</columns>
        <columns>Application__c</columns>
        <columns>Conflicting_Application__c</columns>
        <columns>Manually_Flagged__c</columns>
        <columns>System_Flagged__c</columns>
        <columns>Review_Status__c</columns>
        <columns>Listing__c</columns>
        <columns>Primary_Application_Applicant_Name__c</columns>
        <columns>Conflicting_Application_Applicant_Name__c</columns>
        <columns>Primary_Application_Submission_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Review_Status__c</field>
            <operation>equals</operation>
            <value>Pending Review</value>
        </filters>
        <label>All Pending Review</label>
    </listViews>
    <nameField>
        <displayFormat>FLAG-{000000}</displayFormat>
        <label>Flagged Application Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flagged Applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>